<resources>
    <string name="app_name">Exercise Timer</string>
    <string name="action_settings">Settings</string>
    <string name="init_time">00:00:000</string>
    <string name="start">Start</string>
    <string name="stop">Pause</string>
    <string name="reset">Reset</string>
    <string name="app_settings">Exercise Timer Settings</string>
    <string name="setting_alarm_every">Alarm time:</string>
    <string name="alarm_every_settings_hint">number of seconds</string>
    <string name="save_settings_button">Save Settings</string>
    <string name="biper_spinner_text">Alarm sound:</string>
</resources>
