<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timer_frament"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_alarm_every"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/editAlarmEvery"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editAlarmEvery"
        android:layout_alignParentTop="true"
        android:hint="@string/alarm_every_settings_hint"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biper_spinner_text"
        android:id="@+id/biperText"
        android:layout_alignTop="@+id/biper_spinner"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Spinner
        android:id="@+id/biper_spinner"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/editAlarmEvery"
        android:layout_alignLeft="@+id/editAlarmEvery"
        android:layout_alignStart="@+id/editAlarmEvery"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/save_settings_button"
        android:id="@+id/save_button"
        android:background="@drawable/button_round_shape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp" />
</RelativeLayout>