<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_time"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:background="@drawable/button_round_shape"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/reset"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_round_shape"
        android:layout_below="@+id/start_button"
        android:layout_alignLeft="@+id/start_button"
        android:layout_alignStart="@+id/start_button" />
</RelativeLayout>

